# EnergyConsumption

./: .gitignore  Analysis.md  CLAUDE.md  README.md  model_comparison.ipynb  predict_informer.py  predict_tft.py  pyproject.toml  requirements.txt  train_deepar.py  train_nbeats.py  train_tft.py
.claude/: settings.local.json
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
checkpoints/: epoch=0-step=17.ckpt
docs/: DATA_GUIDE.md  GETTING_STARTED.md  LSTM_GUIDE.md  MODEL_COMPARISON.md  README.md  TFT_GUIDE.md  VISUALIZATION_GUIDE.md
scripts/: generate_figures.py  predict_tft.py  train_lstm.py  train_multi_region.py  train_tft.py
scripts/experimental/: predict_deepar.py  predict_nbeats.py  train_informer.py
src/: data_loader.py  feature_engineering.py  modeling.py  plotting.py
tests/: test_tft_compatibility.py  test_tft_working.py
